--- a/eSportTournament/Pages/Shared/_Layout.cshtml
+++ b/eSportTournament/Pages/Shared/_Layout.cshtml
@@ -28,9 +28,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Equipes/Index">Equipe</a>
                         </li>
-
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Competitions/Create">Competition</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/DemandeLicence">Licence</a>
@@ -40,6 +39,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/RequeteEquipe">Consulter equipes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Competitions/VoirMatchs">Matchs</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
