--- a/eSportTournament/Pages/Equipes/Create.cshtml
+++ b/eSportTournament/Pages/Equipes/Create.cshtml
@@ -5,9 +5,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>Equipe</h4>
+<h4>Créer une équipe</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
