--- a/eSportTournament/wwwroot/css/site.css
+++ b/eSportTournament/wwwroot/css/site.css
@@ -70,6 +70,6 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-.classRow {
-    background-color: lightgreen !important;
+tr.classRow {
+    background: lightgreen;
 }
