--- a/eSportTournament/wwwroot/css/persocss.css
+++ b/eSportTournament/wwwroot/css/persocss.css
@@ -1,6 +1,7 @@
 ﻿/*
  *  Flex Layout Specifics
 */
+#arbre {
 main {
     display: flex;
     flex-direction: row;
@@ -62,4 +63,6 @@ li.game-spacer {
 
 li.game-bottom {
     border-top: 1px solid #aaa;
+}
+
 }
