--- a/eSportTournament/Pages/Competitions/Create.cshtml
+++ b/eSportTournament/Pages/Competitions/Create.cshtml
@@ -28,6 +28,7 @@
                 <label asp-for="Competition.nombreJoueurs" class="control-label"></label>
                 <input asp-for="Competition.nombreJoueurs" class="form-control" />
                 <span asp-validation-for="Competition.nombreJoueurs" class="text-danger"></span>
+                </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
