--- a/eSportTournament/Pages/DemandeLicence.cshtml
+++ b/eSportTournament/Pages/DemandeLicence.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "DemandeLicence";
 }
 
-<h1>DemandeLicence</h1>
 
-<h4>DemandeLicence</h4>
+<h4>Demande de licence</h4>
 <hr />
+@if (Model.showDemande == true) {
 <div class="row">
     <div class="col-md-4">
         <form method="post">
@@ -16,23 +16,28 @@
             <div class="form-group">
                 <label asp-for="Utilisateur.nom" class="control-label"></label>
                 <input name="nom" id="nom" class="form-control" />
-               <!--  <span asp-validation-for="Utilisateur.nom" class="text-danger"></span> -->
+                <!--  <span asp-validation-for="Utilisateur.nom" class="text-danger"></span> -->
             </div>
             <div class="form-group">
                 <label asp-for="Utilisateur.prenom" class="control-label"></label>
                 <input name="prenom" id="prenom" class="form-control" />
-               <!--  <span asp-validation-for="Utilisateur.prenom" class="text-danger"></span>-->
+                <!--  <span asp-validation-for="Utilisateur.prenom" class="text-danger"></span>-->
             </div>
-          
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
+} else
+            {
+                <h1>Vous avez déjà une demande en cours ou êtes déjà licencié!</h1>
+            }
+
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="Index">Retour</a>
 </div>
 
 @section Scripts {
