--- a/eSportTournament/Pages/Shared/_Layout.cshtml
+++ b/eSportTournament/Pages/Shared/_Layout.cshtml
@@ -39,10 +39,16 @@
                                 <a class="nav-link text-dark" asp-area="" asp-page="/DemandeLicence">Licence</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/DemandeOrganisateur">Organisateur</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/RequeteLicence">Consulter licences</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/RequeteEquipe">Consulter equipes</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/RequeteEquipeCreation">Demandes créa équipe</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Competitions/VoirMatchs">Matchs</a>
@@ -50,6 +56,7 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Equipes/Index">Equipe</a>
                             </li>
+
                         }
 
                     </ul>
