--- a/eSportTournament/Pages/RequeteOrganisateur.cshtml
+++ b/eSportTournament/Pages/RequeteOrganisateur.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model eSportTournament.Pages.RequeteLicenceModel
+@model eSportTournament.Pages.RequeteOrganisateurModel
 
 @{
     ViewData["Title"] = "RequeteLicence";
