--- a/eSportTournament/Pages/Shared/_Layout.cshtml
+++ b/eSportTournament/Pages/Shared/_Layout.cshtml
@@ -27,36 +27,27 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Acceuil</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Accueil</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Competitions/Index">Competition</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Competitions/Index">Compétitions</a>
                         </li>
                         @if (SignInManager.IsSignedIn(User))
                         {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/DemandeLicence">Licence</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/DemandeOrganisateur">Organisateur</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/RequeteLicence">Consulter licences</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/RequeteEquipe">Consulter equipes</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/RequeteEquipeCreation">Demandes créa équipe</a>
-                            </li>
+
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Competitions/VoirMatchs">Matchs</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Equipes/Index">Equipe</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Equipes/Index">Equipes</a>
                             </li>
-
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/DemandeLicence">Demande de licence</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/DemandeOrganisateur">Demande Organisateur</a>
+                            </li>
                         }
 
                     </ul>
