--- a/eSportTournament/Pages/Competitions/Index.cshtml
+++ b/eSportTournament/Pages/Competitions/Index.cshtml
@@ -3,11 +3,15 @@
 
 @{
     ViewData["Title"] = "Index";
+    int i = 0;
 }
 
+@if (Model.showCreate == true) { 
 <p>
-    <a asp-page="Create">Créer une compétition</a>
+    <a asp-page="Create">Créer un championnat</a>
 </p>
+}
+
 <ul class="nav nav-tabs">
     <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="#">Championnat</a>
@@ -22,6 +26,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Competition[0].nomCompetition)
             </th>
+            <th>Jeu</th>
             <th></th>
                   </tr>
     </thead>
@@ -31,12 +36,15 @@
             <td>
                 @Html.DisplayFor(modelItem => item.nomCompetition)
             </td>
+            <td>@Model.jeuxNoms[i]</td>
             <td>
                 <a asp-page="./Classement" asp-route-id="@item.ID">Classement</a>
               @if (Model.showDelete == true)
-              {  <a asp-page="./Delete" asp-route-id="@item.ID"> | Delete</a>}
+              {  <a asp-page="./Delete" asp-route-id="@item.ID"> | Supprimer</a>}
             </td>
         </tr>
+    i += 1;
+
 }
     </tbody>
 </table>
