--- a/eSportTournament/Pages/Competitions/IndexTournois.cshtml
+++ b/eSportTournament/Pages/Competitions/IndexTournois.cshtml
@@ -3,14 +3,18 @@
 
 @{
     ViewData["Title"] = "Index";
+    int i = 0;
+}
+@if (Model.showCreate == true)
+{
+    <p>
+        <a asp-page="CreateTournoi">Créer un tournoi</a>
+    </p>
 }
 
-<p>
-    <a asp-page="CreateTournoi">Créer un tournoi</a>
-</p>
 <ul class="nav nav-tabs">
     <li class="nav-item">
-        <a class="nav-link"  asp-page="./Index">Championnat</a>
+        <a class="nav-link" asp-page="./Index">Championnat</a>
     </li>
     <li class="nav-item">
         <a class="nav-link active" aria-current="page" asp-page="./IndexTournois">Tournois</a>
@@ -22,20 +26,27 @@
             <th>
                 @Html.DisplayNameFor(model => model.Competition[0].nomCompetition)
             </th>
+            <th>Jeu</th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Competition) {
+        @foreach (var item in Model.Competition)
+        {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.nomCompetition)
             </td>
+            <td>@Model.jeuxNoms[i]</td>
+
             <td>
-                <a asp-page="./Details" asp-route-id="@item.ID">Arbre</a> 
-          @if(Model.showDelete == true){   <a asp-page="./Delete" asp-route-id="@item.ID"> | Delete</a>}
+                <a asp-page="./Details" asp-route-id="@item.ID">Arbre</a>
+                @if (Model.showDelete == true)
+                {<a asp-page="./Delete" asp-route-id="@item.ID"> | Delete</a>}
             </td>
         </tr>
-}
+            i += 1;
+
+        }
     </tbody>
 </table>
