--- a/eSportTournament/Pages/Competitions/Create.cshtml
+++ b/eSportTournament/Pages/Competitions/Create.cshtml
@@ -28,16 +28,20 @@
                 <label asp-for="Competition.nombreJoueurs" class="control-label"></label>
                 <input asp-for="Competition.nombreJoueurs" class="form-control" />
                 <span asp-validation-for="Competition.nombreJoueurs" class="text-danger"></span>
-                </div>
+            </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <label class="control-label">Jeu:</label>
+                <select asp-items="ViewBag.JEUX" asp-for="@Model.SelectedGame" title="Choisissiez un jeu" ></select>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Créer" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="Index">Retour à la liste</a>
 </div>
 
 @section Scripts {
