--- a/eSportTournament/Pages/Competitions/VoirMatchsTournois.cshtml
+++ b/eSportTournament/Pages/Competitions/VoirMatchsTournois.cshtml
@@ -23,14 +23,9 @@
                 @Html.DisplayNameFor(model => model.Match[0].EquipeA)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Match[0].EquipeB)
+                Equipe B
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Match[0].EquipeAScore)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Match[0].EquipeBScore)
-            </th>
+         
             <th>
                 @Html.DisplayNameFor(model => model.Match[0].gagnantID)
             </th>
@@ -62,12 +57,6 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.EquipeB.nomEquipe)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.EquipeAScore)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.EquipeBScore)
                 </td>
                 <td>
                     @nomGagnant
