--- a/eSportTournament/Pages/DemandeOrganisateur.cshtml
+++ b/eSportTournament/Pages/DemandeOrganisateur.cshtml
@@ -24,7 +24,7 @@
     <h2>Vous devez faire une demande de licence avant d'être organisateur.</h2>
 }
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="Index">Retour à la liste</a>
 </div>
 
 @section Scripts {
