--- a/eSportTournament/Pages/Equipes/Create.cshtml
+++ b/eSportTournament/Pages/Equipes/Create.cshtml
@@ -20,14 +20,14 @@
                 <span asp-validation-for="Equipe.nomEquipe" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Créer" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="Index">Retour à la liste</a>
 </div>
 
 @section Scripts {
