--- a/eSportTournament/Pages/Equipes/Delete.cshtml
+++ b/eSportTournament/Pages/Equipes/Delete.cshtml
@@ -5,24 +5,16 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Supprimer l'équipe @Html.DisplayFor(model => model.Equipe.nomEquipe) ?</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Equipe</h4>
     <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Equipe.nomEquipe)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Equipe.nomEquipe)
-        </dd>
-    </dl>
     
     <form method="post">
         <input type="hidden" asp-for="Equipe.ID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+      
+            <input type="submit" value="Delete" class="btn btn-danger" />
+
+        <a asp-page="./Index"> | Retour à la liste</a>
     </form>
 </div>
