--- a/eSportTournament/Pages/Equipes/Details.cshtml
+++ b/eSportTournament/Pages/Equipes/Details.cshtml
@@ -5,21 +5,25 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
-
 <div>
-    <h4>Equipe</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Equipe.nomEquipe)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Equipe.nomEquipe)
-        </dd>
-    </dl>
+    <h4>Equipe @Html.DisplayFor(model => model.Equipe.nomEquipe)</h4>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Joueurs</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.joueursEquipe)
+            {
+                string nomPrenom = item.nom + " " + item.prenom;
+                <tr>
+                    <td>@nomPrenom</td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Equipe.ID">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Index">Retour à la liste</a>
 </div>
