--- a/eSportTournament/Pages/RequeteOrganisateur.cshtml
+++ b/eSportTournament/Pages/RequeteOrganisateur.cshtml
@@ -5,11 +5,8 @@
     ViewData["Title"] = "RequeteLicence";
 }
 
-<h1>RequeteLicence</h1>
+<h1>Demandes pour devenir organisateur</h1>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
 <form method="post">
     <div class="form-group">
         <input type="submit" value="Enregistrer les validations" class="btn btn-primary" />
@@ -17,24 +14,24 @@
     <table class="table">
         <thead>
             <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.DemandeLicence[0].userID)
-                </th>
+
                 <th>Demandeur</th>
                 <th></th>
-
+                <th>
+                </th>
             </tr>
         </thead>
         <tbody>
             @for (var i = 0; i < Model.DemandeLicence.Count(); i++)
             {
-                <tr>
-                    <td>
-                        <input type="hidden" asp-for="@Model.DemandeLicence[i].ID" />
-                    </td>
-                    <td>@Model.noms[i]</td>
-                    <td><input asp-for="@Model.DemandeLicence[i].approuver" /></td>
-                </tr>
+            <tr>
+
+                <td>@Model.noms[i]</td>
+                <td><input asp-for="@Model.DemandeLicence[i].approuver" /></td>
+                <td>
+                    <input type="hidden" asp-for="@Model.DemandeLicence[i].ID" />
+                </td>
+            </tr>
             }
         </tbody>
     </table>
